traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:14: error: Missing closing brace `}' assumed here
} 
^